<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RecItemCS"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#00FFFFFF"
    android:paddingTop="0dp">

    <View
        android:id="@+id/RecItemrectangleView"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/RecItemOfficialPhoto"
        android:layout_width="116dp"
        android:layout_height="128dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/official_photo"
        app:layout_constraintBottom_toBottomOf="@+id/RecItemrectangleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/missing"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/RecItemJobName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/u_s_senator"
        android:textColor="#9C27B0"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/RecItemOfficialPhoto"
        app:layout_constraintTop_toTopOf="@+id/RecItemOfficialPhoto" />

    <TextView
        android:id="@+id/RecItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/first_m_last"
        android:textColor="#9C27B0"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/RecItemParty"
        app:layout_constraintStart_toEndOf="@+id/RecItemOfficialPhoto"
        app:layout_constraintTop_toBottomOf="@+id/RecItemJobName" />

    <TextView
        android:id="@+id/RecItemParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/unknown_party"
        android:textColor="#9C27B0"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/RecItemOfficialPhoto"
        app:layout_constraintStart_toEndOf="@+id/RecItemOfficialPhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>