<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainCS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA1B9F"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainUserLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown_location"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainToolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#570755"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/civil_advocacy"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/MainToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MainToolbar" />

    <ImageButton
        android:id="@+id/MainAboutButton"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/main_ab"
        app:layout_constraintBottom_toBottomOf="@+id/MainToolbar"
        app:layout_constraintEnd_toStartOf="@+id/MainLocationSearchButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/MainLocationSearchButton"
        android:layout_width="42dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/main_lsb"
        app:layout_constraintBottom_toBottomOf="@+id/MainToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainRecView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainUserLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>